 * Fix $3001: Users cannot delete/edit their own bugnotes.
 * Fix #3005: custom_field_api.php does not work with PHP 4.0.6.
 * DB Upgrade: Added "id" primary key to bug history table (needed for #2980).
 * Languages: Updated German localisation.
 * Changed config option (default_notify_flags): remove 'admin', 'manager', and 'threshold' categories and add 'threshold_min' and 'threshold_max'
 * New config option (email_receive_own): controls whether users receive emails for changes they make
 * New config option (display_project_padding): controls the level of padding on project ids
 * New config option (display_bug_padding): controls the level of padding on bug ids
 * New config option (display_bugnote_padding): controls the level of padding on bugnote ids
 * New config option (file_type_icons): provides mapping between file extensions and icons to be used for file types.
 * New config option (show_monitor_list_threshold): threshold needed to view the list of users monitoring a bug.
 * New config option (document_files_prefix): prefix to be used for file system names for documents uploaded to projects (eg: doc-001-myprojdoc.zip when using prefix 'doc').
 * New config option (preview_attachments_inline_max_size): Configure the maximum size for an attachment to be viewed inline.  (needed by #838)
 * Removed config option (bugnote_include_file): Used file path directly since there is no reason to make it configurable.
 * Removed config option (bugnote_view_include_file): Used file path directly since there is no reason to make it configurable.
 * Removed config option (bugnote_add_include_file): Used file path directly since there is no reason to make it configurable.
 * Removed config option (history_include_file): Used file path directly since there is no reason to make it configurable.
 * Removed config option (print_bugnote_include_file): Used file path directly since there is no reason to make it configurable.