@@ -41,6 +41,7 @@ Mantis ChangeLog
  * DB Upgrade: Added "id" primary key to bug history table (needed for #2980).
  * Languages: Updated German localisation.
  * Changed config option (default_notify_flags): remove 'admin', 'manager', and 'threshold' categories and add 'threshold_min' and 'threshold_max'
+ * New config option (bugnote_allow_user_edit_delete): controls whether users are allowed to edit or delete their own bugnotes.
  * New config option (email_receive_own): controls whether users receive emails for changes they make
  * New config option (display_project_padding): controls the level of padding on project ids
  * New config option (display_bug_padding): controls the level of padding on bug ids
